--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,7 @@
 <IfModule mod_rewrite.c>
 # activar rewrite
 RewriteEngine on
-ErrorDocument 404 http://localhost/Master_PHP/PHP_POO/Shop/error/
+ErrorDocument 404 https://localhost/Master_PHP/PHP_POO/Shop/error/
 
 RewriteCond %{SCRIPT_FILENAME} !-d
 RewriteCond %{SCRIPT_FILENAME} !-f
